--- a/Projects/Project 2/moodle/history.txt
+++ b/Projects/Project 2/moodle/history.txt
@@ -4,6 +4,7 @@ sudo mkdir -p /mnt/moodle
 sudo nano /etc/fstab
 
 172.31.84.245:/mnt/nfs_share /mnt/moodle nfs auto 0 0
+192.168.10.140:/mnt/nfs_share /mnt/moodle nfs auto 0 0 #DCA
 
 sudo mount -a
 ls /mnt/moodle/
